--- a/GastosApp.API/GastosApp.API.csproj
+++ b/GastosApp.API/GastosApp.API.csproj
@@ -14,4 +14,13 @@
     <PackageReference Include="Swashbuckle.AspNetCore" Version="9.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GastosApp.Core\GastosApp.Core.csproj" />
+    <ProjectReference Include="..\GastosApp.Infrastructure\GastosApp.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Controllers\" />
+  </ItemGroup>
+
 </Project>
