--- a/GastosApp.API/appsettings.json
+++ b/GastosApp.API/appsettings.json
@@ -5,5 +5,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost;Database=GastosDb;Trusted_Connection=True;TrustServerCertificate=True;"
+    }
+  
+
 }
