--- a/GastosApp.Desktop/GastosApp.Desktop.csproj
+++ b/GastosApp.Desktop/GastosApp.Desktop.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\GastosApp.Core\GastosApp.Core.csproj" />
+    <ProjectReference Include="..\GastosApp.Infrastructure\GastosApp.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
